# ras545-labs

./: .gitignore  README.md  main.py  pyproject.toml
chess_board/: takepictures.py
lab2/: lab2-gripper.py  lab2.ipynb  suction.py
lab3/: lab3-notebook.ipynb  palletizing.py  sample_yolo_code.py
lab4/: inverse_kinematics.mlx  kinematics.py  notebook.ipynb
midterm/: ai.py  constants.py  main.py  mock_device.py  robot.py  video.py
midterm2/: README.md  calib.py  constants.py  main2.py  main_midterm2.py  maze_detection.py  media_utils.py  midterm2_nb.ipynb  point2coordinates.py  robot.py  seed.py  solve_maze.py  test_clip.py  vlm.py  with_cv2.py
