[project]
name = "ras545"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.69.0",
    "langchain>=1.0.2",
    "notebook>=7.4.5",
    "openai>=2.6.0",
    "pydantic>=2.11.9",
    "pydobot>=1.3.2",
    "pydobot2>=0.1.0",
    "python-dotenv>=1.1.1",
    "ultralytics>=8.3.206",
]
